--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,12 +4,12 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: rgb(38 38 38);;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: rgb(38 38 38);;
     --foreground: #ededed;
   }
 }
